@@ -1,0 +1,53 @@
+{
+    "sender": {
+        "snd_buffer": 40,
+        "capabilities": {}
+    },
+    "name": "2305393538",
+    "delay": 1500,
+    "subflows": [
+        {
+            "min_rtt": 40462,
+            "state": "TcpEstablished",
+            "pacing": 254997,
+            "dstIp": "3.3.3.2",
+            "srcPort": 31765,
+            "rtt_ms": 336003,
+            "rttvar_ms": 13037,
+            "snd_ssthresh": 2147483647,
+            "delivery_rate": 74053,
+            "reordering": 3,
+            "rmem": 62324,
+            "fowd": 0,
+            "wmem": 0,
+            "dstPort": 20756,
+            "rto_ms": 628000,
+            "cc": "reno",
+            "snd_cwnd": 30,
+            "srcIp": "10.0.0.1",
+            "bowd": 0
+        },
+        {
+            "min_rtt": 40525,
+            "state": "TcpEstablished",
+            "pacing": 86389,
+            "dstIp": "3.3.3.2",
+            "srcPort": 55184,
+            "rtt_ms": 165298,
+            "rttvar_ms": 66102,
+            "snd_ssthresh": 2147483647,
+            "delivery_rate": 29841,
+            "reordering": 3,
+            "rmem": 11836,
+            "fowd": 0,
+            "wmem": 0,
+            "dstPort": 20756,
+            "rto_ms": 460000,
+            "cc": "reno",
+            "snd_cwnd": 5,
+            "srcIp": "10.1.0.1",
+            "bowd": 0
+        }
+    ],
+    "capabilities": {}
+}
