@@ -1,6 +1,7 @@
 mptcpanalyzer 0.3.3 (dev):
-- display resulting plot by default
+- display resulting plot by default (--display=term|gui|no)
 - now loads and expose the interface names
+- new plot: congestion windows (in use with mptcp-pm)
 
 mptcpanalyzer 0.3.2:
 - TcpConnection now accepts a format to customize its display
